Grunt equipped with assembly.io

--- a/components/pages/index.hbs
+++ b/components/pages/index.hbs
@@ -1,4 +1,7 @@
-
+---
+greeting: Aloha
+target: Pepe
+---
 
 <html>
 <head>
@@ -6,6 +9,6 @@
   <title>A greeting</title>
 </head>
 <body>
-  <h1>Aloha, Pepe!</h1>
+  <h1>{{ greeting }}, {{ target }}!</h1>
 </body>
 </html>
