Assemble cannot include atomic partials

--- a/components/pages/index.hbs
+++ b/components/pages/index.hbs
@@ -3,12 +3,10 @@ greeting: Aloha
 target: Pepe
 ---
 
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>A greeting</title>
-</head>
-<body>
-  <h1>{{ greeting }}, {{ target }}!</h1>
+{{> head }}
+
+<h1>{{ greeting }}, {{ target }}!</h1>
+  
+
 </body>
 </html>
